--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -43,6 +43,7 @@
     color: #c0a379;
     font-size: 0.9rem;
     letter-spacing: 0.5px;
+    margin-bottom: 8px;
 }
 
 .login-form input {
@@ -65,16 +66,24 @@
     background: linear-gradient(90deg, #7b6b54, #c0a379);
     color: #1b273f;
     font-weight: 600;
-    padding: 12px 20px;
+    padding: 0.75rem;
     border: none;
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 0 20px rgba(1922, 163, 121, 0.3);
     transition: transform 0.3s, box-shadow 0.3s;
+    align-self: center;
 }
 
 .login-btn:hover {
     transform: translateY(-2px);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 0 20px;
 }
 
 
@@ -84,6 +93,7 @@
     margin-top: 1.5rem;
     font-size: 0.9rem;
     color: #838f9b;
+    padding-bottom: 20px;
 }
 
 .create-account-text a {
