--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,13 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 @font-face {
-    font-family: 'StarlightRune';
-    src: (url('frontend\src\assets\fonts\StarlightRune.woff') format('woff'),
-         url('frontend\src\assets\fonts\StarlightRune.woff2') format('woff2'));
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap; /* Improves loading performance */
+  font-family: 'StarlightRune';
+  src: url('./assets/fonts/StarlightRune.woff2') format('woff2'),
+       url('./assets/fonts/StarlightRune.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
