--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -21,19 +21,19 @@
 
 .text-section {
   /*max-width: 50%;*/
-  padding-top: 35vh;
+  padding-top: 32vh;
 }
 
 .headline {
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 1.2;
+    font-family: 'StarlightRune', sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 2px;
 }
 
 .subtext {
-  margin-top: 1rem;
   font-size: 1.1rem;
-  line-height: 1.6;
   color: #d0d0d0;
 }
 
@@ -42,4 +42,26 @@
   height: 400px;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 20px;
+}
+
+.typewriter {
+  font-family: 'StarlightRune', sans-serif;
+  font-size: 4rem;
+  overflow: hidden; /* Ensures the text is hidden while typing */
+  border-right: 3px solid #c0a379; /* The blinking caret */
+  white-space: nowrap;
+  letter-spacing: 2px;
+  width: 0;
+  animation: typing 2.5s steps(20, end) forwards, blink 0.7s infinite;
+}
+
+/* Typing animation */
+@keyframes typing {
+  from { width: 0; }
+  to { width: 9ch; } /* Adjust the number (13) to match your text length */
+}
+
+/* Caret blink */
+@keyframes blink {
+  50% { border-color: transparent; }
 }
