--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,5 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100%;
   text-align: center;
 }
 @font-face {
@@ -10,4 +9,12 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background: none;
 }
