--- a/frontend/src/components/ActivityModal.css
+++ b/frontend/src/components/ActivityModal.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'StarlightRune', sans-serif;
 }
 
 .modal-content {
