--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -26,6 +26,7 @@
     background-color: #c0a379;
     color: c0a379;
     font-weight: 600;
+    font-size: 18px;
     width: 180px;
     height: 40px;
     cursor: pointer;
@@ -34,13 +35,23 @@
 }
 
 .journey-btn:hover {
-    transform: scale(1.05);
+     background-color: rgba(192, 163, 121, 0.1); /* Subtle dark gold background hover */
+    color: #c0a379; /* Gold text on hover */
 }
-
 .trip-btn {
-    background: transparent;
-    color: #ebdbc1; /* Light text color */
-    border: 1px solid #c0a379; /* Gold border */
+    font-family: 'StarlightRune', sans-serif;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #c0a379;
+    color: c0a379;
+    font-weight: 600;
+    font-size: 18px;
+    width: 180px;
+    height: 40px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .trip-btn:hover {
